--- a/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
@@ -1,4 +1,4 @@
-<app-page>
+<app-page autoTitle>
   <div class="row img-thumbnail">
     <div class="col-sm-3">
       <div class="item-panel-heading">
@@ -58,7 +58,7 @@
             {{notifyTarget.alertTitle}}: </strong> {{notifyTarget.alertMessage}}
           <span *ngIf="notifyTarget.showContactUs"> contact our <app-contact-us class="alert-link" role="membership"
                                                                                 text="Membership Administrator"></app-contact-us>
-          </span>
+              </span>
         </div>
       </div>
     </div>
