--- a/projects/ngx-ramblers/src/app/carousel/edit/image-list-edit/image-list-edit.html
+++ b/projects/ngx-ramblers/src/app/carousel/edit/image-list-edit/image-list-edit.html
@@ -1,26 +1,74 @@
-<div *ngIf="allow.edit && contentMetadata">
-  <div class="row">
-    <div class="col-sm-12 mt-2">
-      <app-badge-button [icon]="faSave" caption="Save changes and exit" (click)="saveChangeAndExit()"
-                        [disabled]="this.changedItems.length > 0"></app-badge-button>
-      <app-badge-button [icon]="faSave" caption="Save" (click)="saveChanges()"
-                        [disabled]="this.changedItems.length > 0"></app-badge-button>
-      <app-badge-button [icon]="faUndo" caption="Exit without saving"
-                        (click)="exitBackWithoutSaving()"></app-badge-button>
-      <app-badge-button [icon]="faUndo" caption="Undo" (click)="undoChanges()"></app-badge-button>
-      <app-badge-button [icon]="faSortNumericDown" caption="Sort by image date"
-                        (click)="sortByDate()"></app-badge-button>
-      <app-badge-button *ngIf="imagesExist()" [icon]="faSortNumericUp" caption="Reverse sort order"
-                        (click)="reverseSortOrder()"></app-badge-button>
-      <app-badge-button *ngIf="imagesExist()" [icon]="faEraser" caption="Clear images"
-                        (click)="clearImages()"></app-badge-button>
-      <app-badge-button [icon]="faAdd" *ngIf="!imagesExist()" caption="Create First Image"
-                        (click)="insertToEmptyList()"></app-badge-button>
-      <app-badge-button *ngIf="contentMetadata?.imageTags?.length>0"
+<ng-container *ngIf="allow.edit && contentMetadata">
+  <input #fileElement class="d-none" type="file" ng2FileSelect multiple (onFileSelected)="onFileSelect($event)"
+         [uploader]="uploader">
+  <div class="row no-gutters">
+    <div class="col pr-1">
+      <app-badge-button fullWidth="true" [icon]="faSave" caption="Save changes and exit"
+                        (click)="requestSaveChangesAndExit()"
+                        [disabled]="uploader.isUploading"/>
+    </div>
+    <div class="col pr-1">
+      <app-badge-button fullWidth="true" [icon]="faSave" caption="Save" (click)="requestSaveChanges()"
+                        [disabled]="uploader.isUploading"/>
+    </div>
+    <div class="col pr-1">
+      <app-badge-button fullWidth="true" [icon]="faUndo" caption="Exit without saving"
+                        [disabled]="uploader.isUploading"
+                        (click)="exitBackWithoutSaving()"/>
+    </div>
+    <div class="col pr-1">
+      <app-badge-button fullWidth [icon]="faUndo" [caption]="'Undo'" (click)="undoChanges()"
+                        [disabled]="uploader.isUploading"/>
+    </div>
+    <div class="col pr-1">
+      <app-badge-button fullWidth [icon]="faSortNumericDown" caption="Sort by image date"
+                        [disabled]="uploader.isUploading"
+                        (click)="sortByDate()"/>
+    </div>
+    <div *ngIf="imagesExist()" class="col pr-1">
+      <app-badge-button fullWidth [icon]="faSortNumericUp" caption="Reverse sort order"
+                        [disabled]="uploader.isUploading"
+                        (click)="reverseSortOrder()"/>
+    </div>
+    <div *ngIf="imagesExist()" class="col pr-1">
+      <app-badge-button fullWidth [icon]="faEraser" caption="Clear images"
+                        [disabled]="uploader.isUploading"
+                        (click)="clearImages()"/>
+    </div>
+    <div *ngIf="!imagesExist()" class="col pr-1">
+      <app-badge-button fullWidth [icon]="faAdd" caption="Create First Image"
+                        [disabled]="uploader.isUploading"
+                        (click)="insertToEmptyList()"/>
+    </div>
+    <div *ngIf="contentMetadata?.imageTags?.length>0" class="col pr-1">
+      <app-badge-button fullWidth
                         [icon]="faTags"
+                        [disabled]="uploader.isUploading"
                         [caption]="manageTags?'Close Tags': 'Manage Tags'"
-                        (click)="toggleManageTags()">
-      </app-badge-button>
+                        (click)="toggleManageTags()"/>
+    </div>
+    <div class="col-auto">
+      <app-badge-button fullWidth [disabled]="uploader.isUploading"
+                        [icon]="faFile"
+                        caption="Choose Files"
+                        (click)="browseToFile(fileElement)"/>
+    </div>
+  </div>
+  <div class="row mt-2">
+    <div class="col-sm-12">
+      <div ng2FileDrop [ngClass]="{'file-over': !uploader.isUploading && hasFileOver}"
+           (fileOver)="fileOver($event)"
+           (onFileDrop)="onFileDropped($event)"
+           [uploader]="uploader"
+           class="badge-drop-zone">Drop new files here to add them
+      </div>
+    </div>
+    <div *ngIf="uploader.isUploading" class="col-sm-12 mb-2 mt-2">
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }">
+          {{uploader.progress}} %
+        </div>
+      </div>
     </div>
     <div class="col-sm-12 mt-4">
       <div *ngIf="warningTarget.showAlert" class="flex-grow-1 alert {{warningTarget.alertClass}}">
@@ -93,8 +141,7 @@
           (ngModelChange)="applyFilter()"
           type="checkbox" class="custom-control-input"
           id="show-duplicates">
-        <label class="custom-control-label" for="show-duplicates">Show images that have duplicated
-          images</label>
+        <label class="custom-control-label" for="show-duplicates">Show duplicate images</label>
       </div>
     </div>
   </div>
@@ -114,7 +161,7 @@
   <div class="card mb-3">
     <div class="card-body">
       <div class="row">
-        <div class="col-auto">
+        <div class="col-sm-6">
           <div class="form-group">
             <label for="name">Carousel Name</label>
             <input [delay]="1000"
@@ -123,7 +170,7 @@
                    class="form-control">
           </div>
         </div>
-        <div class="col-auto">
+        <div class="col-sm-6">
           <app-aspect-ratio-selector [label]="'Default Aspect Ratio'"
                                      [dimensionsDescription]="contentMetadata.aspectRatio"
                                      (dimensionsChanged)="dimensionsChanged($event)"></app-aspect-ratio-selector>
@@ -133,7 +180,9 @@
   </div>
   <ng-container
     *ngFor="let imageMetaDataItem of currentPageImages;let index = index; trackBy: metadataItemTracker;">
-    <app-image-edit [index]="index"
+    <app-image-edit noImageSave
+                    [index]="index"
+                    [duplicateImages]="duplicateImages"
                     [contentMetadata]="contentMetadata"
                     [contentMetadataImageTags]="contentMetadata.imageTags"
                     [filteredFiles]="currentPageImages"
@@ -147,4 +196,4 @@
                     (moveDown)="moveDown($event)">
     </app-image-edit>
   </ng-container>
-</div>
+</ng-container>
