--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit-text-row.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit-text-row.html
@@ -1,11 +1,12 @@
 <ng-container *ngIf="actions.isTextRow(row)">
   <div [class]="actions.rowClasses(row)">
     <ng-container *ngFor="let column of row?.columns; let columnIndex = index;">
-      <div [class]="'col-sm-' + (column.columns||12)">
+      <div [class]="'col-sm-' + (focusSensitiveColumns(column))">
         <!-- beginning of row content editing-->
         <div *ngIf="!column.rows" class="thumbnail-site-edit h-100">
           <div class="thumbnail-heading">Col {{columnIndex + 1}}</div>
           <app-markdown-editor (saved)="actions.saveContentTextId($event, rowIndex, column, pageContent)"
+                               (focusChange)="markdownEditorFocusChange($event)"
                                [buttonsAvailableOnlyOnFocus]="true"
                                [category]="contentPath"
                                [queryOnlyById]="true"
@@ -51,13 +52,15 @@
           </app-markdown-editor>
           <div *ngIf="imageSource(rowIndex, columnIndex, column?.imageSource) || editActive(rowIndex, columnIndex)"
                class="mt-2 mb-3">
-            <app-image-cropper-and-resizer
-              *ngIf="editActive(rowIndex, columnIndex)"
-              [preloadImage]="column?.imageSource"
-              (imageChange)="imageChanged(rowIndex, columnIndex, $event)"
-              (quit)="exitImageEdit(rowIndex, columnIndex)"
-              (save)="imagedSaved(rowIndex, columnIndex, column, $event)">
-            </app-image-cropper-and-resizer>
+            <div class="mb-2">
+              <app-image-cropper-and-resizer
+                *ngIf="editActive(rowIndex, columnIndex)"
+                [preloadImage]="column?.imageSource"
+                (imageChange)="imageChanged(rowIndex, columnIndex, $event)"
+                (quit)="exitImageEdit(rowIndex, columnIndex)"
+                (save)="imagedSaved(rowIndex, columnIndex, column, $event)">
+              </app-image-cropper-and-resizer>
+            </div>
             <app-card-image
               [borderRadius]="column?.imageBorderRadius"
               [unconstrainedHeight]="true"
