--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
@@ -26,8 +26,8 @@
 
 .ellipsis-right
   @extend .ellipsis
-  @extend .rtl
+  text-align: right
 
 .ellipsis-left
   @extend .ellipsis
-  @extend .ltr
+  text-align: left
