--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit-text-row.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit-text-row.html
@@ -10,7 +10,7 @@
                                [buttonsAvailableOnlyOnFocus]="true"
                                [category]="contentPath"
                                [queryOnlyById]="true"
-                               [clearEnabled]="true"
+                               [unlinkEnabled]="true"
                                [description]="actions.rowColumnIdentifierFor(rowIndex, columnIndex, contentDescription)"
                                [id]="column?.contentTextId"
                                [initialView]="actions.view()"
@@ -37,11 +37,10 @@
                        class="form-control input-sm" placeholder="Enter number of columns (1-12)"
                        type="number">
               </div>
-              <div (click)="editImage(rowIndex, columnIndex)"
-                   delay=500 tooltip="edit image" class="badge-button">
-                <fa-icon [icon]="column.imageSource? faPencil : faAdd"></fa-icon>
-                <span>{{column.imageSource ? 'edit' : 'add'}} image</span>
-              </div>
+              <app-badge-button (click)="editImage(rowIndex, columnIndex)"
+                                [icon]="column.imageSource? faPencil : faAdd"
+                                [caption]="column?.imageSource ? 'edit' : 'add' + ' image'">
+              </app-badge-button>
               <app-actions-dropdown
                 [columnIndex]="columnIndex"
                 [pageContent]="pageContent"
@@ -50,22 +49,21 @@
               </app-actions-dropdown>
             </ng-container>
           </app-markdown-editor>
-          <div *ngIf="imageSource(rowIndex, columnIndex, column?.imageSource) || editActive(rowIndex, columnIndex)"
-               class="mt-2 mb-3">
-            <div class="mb-2">
-              <app-image-cropper-and-resizer
-                *ngIf="editActive(rowIndex, columnIndex)"
-                [preloadImage]="column?.imageSource"
-                (imageChange)="imageChanged(rowIndex, columnIndex, $event)"
-                (quit)="exitImageEdit(rowIndex, columnIndex)"
-                (save)="imagedSaved(rowIndex, columnIndex, column, $event)">
-              </app-image-cropper-and-resizer>
-            </div>
-            <app-card-image
-              [borderRadius]="column?.imageBorderRadius"
-              [unconstrainedHeight]="true"
-              [imageSource]="imageSource(rowIndex, columnIndex, column?.imageSource)">
-            </app-card-image>
+          <div class="mt-2 mb-3">
+            <ng-container *ngIf="editActive(rowIndex, columnIndex)">
+              <div class="mb-2">
+                <app-image-cropper-and-resizer
+                  [preloadImage]="column?.imageSource"
+                  (imageChange)="imageChanged(rowIndex, columnIndex, $event)"
+                  (quit)="exitImageEdit(rowIndex, columnIndex)"
+                  (save)="imagedSaved(rowIndex, columnIndex, column, $event)">
+                </app-image-cropper-and-resizer>
+              </div>
+              <app-card-image [borderRadius]="column?.imageBorderRadius"
+                              [unconstrainedHeight]="true"
+                              [imageSource]="imageSource(rowIndex, columnIndex, column?.imageSource)">
+              </app-card-image>
+            </ng-container>
             <div class="row mt-2">
               <div [class]="imagePropertyColumnClasses(column)">
                 <label [for]="actions.rowColumnIdentifierFor(rowIndex,columnIndex,'name')">
